force-app/main/default/objects/Plan_de_pagos__c/Plan_de_pagos__c.object-meta.xml
<CustomObject>
    <label>Plan de pago</label>
    <nameField>
        <label>Plan de pagos Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan de pagos</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>