force-app/main/default/objects/Plan_de_pagos__c/fields/API_Comercial__c.field-meta.xml
<CustomField>
    <fullName>API_Comercial__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>API Comercial</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Plan_de_pagos1</relationshipName>
    <type>Lookup</type>
</CustomField>