force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Contact_id__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Contact_id__c</fullName>
    <formula>CASESAFEID(Oportunidad__r.Promocion__r.Contact__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Contact id</label>
    <type>Text</type>
</CustomField>