force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_DocAdenda1__c.field-meta.xml
<CustomField>
    <fullName>CONGA_DocAdenda1__c</fullName>
    <formula>&quot;A)	La cantidad de &quot; +
IF(ISBLANK(TEXT(Oportunidad__r.Pago_Reserva_p__c)) , &quot;________&quot; ,TEXT((1 - Oportunidad__r.Pago_Reserva_p__c/ 100) * Oportunidad__r.Reserva__c)) +
&quot;EUROS, más I.V.A., que hacen un total de &quot; +
IF(ISBLANK(TEXT(Oportunidad__r.Reserva__c)) , &quot;________&quot; , TEXT(Oportunidad__r.Reserva__c)) +
&quot; €, que la parte compradora entregó con anterioridad al presente contrato en concepto de reserva. Se adjunta como ANEXO I copia del documento justificativo de pago del importe entregado en concepto de reserva.&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_DocAdenda1</label>
    <type>Text</type>
</CustomField>