force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Importe_Escritura__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Importe_Escritura__c</fullName>
    <formula>Oportunidad__r.Importe_escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Importe Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>