force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Oportunidad_Id__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Oportunidad_Id__c</fullName>
    <formula>Oportunidad__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Oportunidad Id</label>
    <type>Text</type>
</CustomField>