force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Pago_Escritura__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Pago_Escritura__c</fullName>
    <formula>Oportunidad__r.Pago_Escritura__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Pago Escritura</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>