force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Promocion_Id__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Promocion_Id__c</fullName>
    <formula>Oportunidad__r.Promocion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Promocion Id</label>
    <type>Text</type>
</CustomField>