force-app/main/default/objects/Plan_de_pagos__c/fields/CONGA_Socio_Empresa_Promotora_Id__c.field-meta.xml
<CustomField>
    <fullName>CONGA_Socio_Empresa_Promotora_Id__c</fullName>
    <formula>Oportunidad__r.Promocion__r.Socio_Empresa_Promotora__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CONGA_Socio_Empresa_Promotora_Id</label>
    <type>Text</type>
</CustomField>