force-app/main/default/objects/Plan_de_pagos__c/fields/EnviarFacturasOracle__c.field-meta.xml
<CustomField>
    <fullName>EnviarFacturasOracle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enviar Facturas Oracle</label>
    <type>Checkbox</type>
</CustomField>