force-app/main/default/objects/Plan_de_pagos__c/fields/Fecha_Activacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Activacion__c</fullName>
    <label>Fecha Activación</label>
    <type>Date</type>
</CustomField>