force-app/main/default/objects/Plan_de_pagos__c/fields/Fecha_Inactivacion__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Inactivacion__c</fullName>
    <label>Fecha Inactivación</label>
    <type>Date</type>
</CustomField>