force-app/main/default/objects/Plan_de_pagos__c/fields/Informe_Comparacion_Plan_de_Pagos__c.field-meta.xml
<CustomField>
    <fullName>Informe_Comparacion_Plan_de_Pagos__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/Report/&quot;+ $Setup.Propiedades__c.ReportComparacionPlanPagosId__c + &quot;/view?fv1=&quot;+Oportunidad__c, &quot;Click para acceder al informe&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Informe Comparación Plan de Pagos</label>
    <type>Text</type>
</CustomField>